--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "react-icons": "^5.5.0",
     "react-router": "^7.5.0",
     "react-tabs": "^6.1.0",
+    "react-toastify": "^11.0.5",
+    "recharts": "^2.15.3",
+    "sweetalert2": "^11.19.1",
+    "sweetalert2-react-content": "^5.1.0",
     "tailwindcss": "^4.1.4"
   },
   "devDependencies": {
